# SaaS

./: .dockerignore  .env.example  .gitignore  BLUEPRINT.md  DECISIONS.md  Dockerfile  KNOWN_LIMITATIONS.md  NOTES.md  README.md  _add_task_probe.py  _ident_probe.py  adr.json  alembic.ini  docker-compose.yml  pyproject.toml  run_tests.sh  saas_mvp.db
.github/workflows/: ci.yml  e2e.yml
docker/: backup.sh  crontab  db-backup-entrypoint.sh  entrypoint.sh  offsite-backup.sh  restore.sh  saas-deploy.sh  scheduler.sh
docs/: AUTODEPLOY.md  BACKUP.md  GO_LIVE.md  KNOWN_LIMITATIONS.md  M2_ISSUES.md  RESEARCH.md
docs/jobs/: reverify_line_credentials.md
docs/m2-handoff/: frontend-copy-table.md
docs/superpowers/plans/: 2026-07-11-ui-redesign.md
docs/superpowers/specs/: 2026-07-11-ui-redesign-design.md
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/lib/: api.ts  chart.ts  client-api.ts  nav.ts  pagination.ts
frontend/tests/: chart.test.ts  console-guards.test.ts  pagination.test.ts  proxy.test.ts  server-only-stub.ts  session-login.test.ts
src/saas_mvp/: __init__.py  __main__.py  app.py  config.py  db.py  deps.py  quota.py  ui_retirement.py
src/saas_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/saas_mvp/ai/: __init__.py  agent.py  anthropic_client.py  base.py  claude_agent_sdk.py  minimax_api.py  minimax_client.py  stub.py
src/saas_mvp/auth/: __init__.py  dependencies.py  ratelimit.py  ratelimit_backend.py  security.py
src/saas_mvp/booking/: __init__.py  commands.py
src/saas_mvp/line_client/: __init__.py  base.py  fake.py  http.py
src/saas_mvp/migrations/: __init__.py  env.py
src/saas_mvp/models/: ai_unanswered_question.py  ai_usage.py  api_key.py  api_key_usage.py  appointment_series.py  audit_log.py  auto_reply_rule.py  bookable_resource.py  booking_form_token.py  booking_notification.py  booking_slot.py  booking_waitlist.py  business_profile.py  campaign.py  campaign_send.py  client_form.py  commission.py  coupon.py  coupon_redemption.py  customer.py  customer_tag.py  customer_tag_link.py  daily_tenant_stat.py  email_delivery.py  email_token.py  faq_entry.py  feature_change_history.py  feature_subscription.py  flex_menu.py  flex_menu_card.py  gcal_sync_job.py  gift_card.py  gift_card_sale.py  invoice.py  job_run.py  line_channel_config.py  line_conversation.py  line_message.py  line_user_lang.py  line_webhook_event.py  (+39 more)
src/saas_mvp/obs/: __init__.py  alerts.py  business.py  context.py  errors.py  logging.py  metrics.py  middleware.py
src/saas_mvp/ops/: __init__.py  aggregate_daily_stats.py  backfill_customer_display_name.py  backfill_line_bot_user_id.py  backfill_trial_grandfather.py  cancel_unpaid_deposits.py  check_billing_health.py  check_gcal_drift.py  check_readiness.py  check_waitlist_holds.py  check_webhook_health.py  migrate.py  process_waitlists.py  promote_admin.py  purge_email_data.py  purge_webhook_events.py  retry_cancel_failed.py  (+15 more)
tests/: _line_http.py  conftest.py  test_admin.py  test_admin_line_bots_overview.py  test_admin_ops.py  test_admin_readiness.py  test_admin_statement.py  test_ai.py  test_ai_conversation.py  test_ai_upgrades.py  test_alembic_migrate.py  test_analytics.py  test_analytics_rest.py  test_anniversary_campaign.py  test_appointment_series.py  test_audit_impersonation.py  test_auth_renew.py  test_auto_reply_engine.py  test_backfill_customer_display_name.py  test_backfill_line_bot_user_id.py  test_backup_scripts.py  test_billing.py  test_billing_bundle.py  test_billing_features.py  test_billing_ops.py  test_billing_subscription_ecpay.py  test_bookable_resources.py  test_booking_blacklist.py  test_booking_bot_mode.py  test_booking_capacity.py  test_booking_commands.py  test_booking_display_name.py  test_booking_flow.py  test_booking_form.py  test_booking_notify.py  test_booking_reminders.py  test_booking_reschedule_webhook.py  test_booking_rest.py  test_booking_webhook.py  test_cache.py  (+190 more)
tests/e2e/: conftest.py  test_console_pages_walk.py  test_console_smoke.py  test_gift_card_purchase_e2e.py  test_smoke.py
(+396 files in other folders)
