[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saas-mvp"
version = "0.1.0"
description = "Multi-tenant SaaS MVP with account, quota, and CRUD APIs"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "passlib[bcrypt]==1.7.4",
    "PyJWT==2.10.1",
    "cryptography==44.0.2",
    "python-multipart==0.0.20",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "email-validator==2.3.0",
]

[project.scripts]
saas-mvp = "saas_mvp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
