[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saas-mvp"
version = "0.1.0"
description = "Multi-tenant SaaS MVP with account, quota, and CRUD APIs"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "PyJWT==2.10.1",
    "cryptography==44.0.2",
    "python-multipart==0.0.20",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "email-validator==2.3.0",
    "jinja2==3.1.4",
    "anthropic==0.111.0",
    "openpyxl==3.1.5",
    "fpdf2==2.8.3",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
saas-mvp = "saas_mvp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"saas_mvp" = ["templates/**", "static/**"]

[tool.pytest.ini_options]
# pythonpath 讓 pytest 在 sys.path 最前面插入 src/，
# 確保 task-5 的程式碼優先於 .pth 指向的舊版 /tmp/test_clean/src 被 import。
pythonpath = ["src"]
testpaths = ["tests"]
# 註冊自訂 marker：消掉每次跑 pytest 看到的
# "PytestUnknownMarkWarning" 雜訊。
markers = [
    "integration: 需外部服務（DB / LINE API）的整合測試，預設不在 unit 套件跑",
]
