[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saas-mvp"
version = "0.1.0"
description = "Multi-tenant SaaS MVP with account, quota, and CRUD APIs"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "PyJWT==2.10.1",
    "cryptography==44.0.2",
    "python-multipart==0.0.20",
    # claude-agent-sdk 的行程內 MCP server 需要 pydantic>=2.11。
    "pydantic==2.11.10",
    "pydantic-settings==2.7.0",
    "email-validator==2.3.0",
    "jinja2==3.1.4",
    "claude-agent-sdk==0.1.81",
    "openpyxl==3.1.5",
    "fpdf2==2.8.3",
    "pillow==11.3.0",
    # Schema 遷移（ops/migrate 啟動時執行 upgrade head；entrypoint 必用故放核心）
    "alembic==1.14.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]
# E2E 冒煙(F5):playwright 只進此 extra,主測試套件不依賴。
# 安裝:pip install -e ".[e2e]" && playwright install chromium
e2e = ["pytest>=8.0", "playwright>=1.40"]
# 多 worker 限流的 Redis 後端（SAAS_RATE_LIMIT_BACKEND=redis）為**選用**額外相依；
# 不安裝時 app 仍可正常 import / 啟動（_make_backend 自動 fallback in-memory）。
# 安裝：pip install -e ".[redis]"
redis = ["redis==5.2.1"]
# 容器 / 多 worker 正式部署：gunicorn（UvicornWorker 管理多 worker）+ psycopg
# （PostgreSQL 驅動，多 worker 必用 PG 才有真正的 FOR UPDATE 行鎖）+ redis 後端。
# 安裝：pip install ".[prod]"
prod = ["gunicorn==23.0.0", "psycopg[binary]==3.2.3", "redis==5.2.1", "sentry-sdk>=2.0"]

[project.scripts]
saas-mvp = "saas_mvp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"saas_mvp" = ["templates/**", "static/**", "migrations/script.py.mako"]

[tool.pytest.ini_options]
# pythonpath 讓 pytest 在 sys.path 最前面插入 src/，
# 確保 task-5 的程式碼優先於 .pth 指向的舊版 /tmp/test_clean/src 被 import。
pythonpath = ["src"]
testpaths = ["tests"]
# 註冊自訂 marker：消掉每次跑 pytest 看到的
# "PytestUnknownMarkWarning" 雜訊。
markers = [
    "integration: 需外部服務（DB / LINE API）的整合測試，預設不在 unit 套件跑",
    "e2e: playwright 瀏覽器冒煙測試（nightly workflow 跑；主 CI 排除）",
]
